2004-02-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* script/lspatch.pl: Fix to fit with new patch options
	* timidity/instrum.c: Fix a little

2004-02-26  Saito <saito2@digitalme.com>

	* timidity/instrum.[ch], timidity/timidity.c, timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/mix.c:
	  Rename #extension redamper to #extension damper.
	  Add some patch options.

2004-02-25  Saito <saito2@digitalme.com>

	* timidity/w32g_vorbis_dll.c, timidity/vorbis_a.c, timidity/recache.c:
	  Fix.

2004-02-24  Saito <saito2@digitalme.com>

	* interface/w32g_syn.c, interface/w32g_i.c:
	  Improve bahaviour around taskbar.

2004-02-24  mput <root@mput.dip.jp>

	* configure.in: avoid warning

2004-02-24  Henrique de Moraes Holschuh <hmh@debian.org>

	* interface/Makefile.am (install.dynamics): The Dynamic interfaces
	  need the .txt files installed too.
	* doc/C/timidity.cfg.5: Fix English expressions
	* common.makefile.in (ELISP_DIR): Bug fix

2004-02-24  mput <root@mput.dip.jp>

	* configure.in: ALSA 1.0 support for alsaseq interface, thanks to
	  <hmh@debian.org>

2004-02-23  Saito <saito2@digitalme.com>

	* interface/w32g_res.{h,rc}, interface/w32g_i.c,
	  interface/w32g_subwin.c, interface/w32g_pref.c,
	  interface/w32g_icon.ico:
	  Change and add some items.

2004-02-22  Saito <saito2@digitalme.com>

	* timidity/reverb.c, timidity/playmidi.c:
	  Fix bug of opt_pan_delay with opt_surround_chorus.
	* timidity/sndfont.c:
	  Fix around memory allocation.

2004-02-22  Kentaro Sato <kentaro@ranvis.com>

	* timidity/mac_a.c: Support 8/24-bit output and PF_BUFF_FRAGM_OPT.
	* timidity/aiff_a.c, timidity/smplfile.c: Fixed padding bug.

2004-02-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/instrum.c: Beautify and fix typo

2004-02-21  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c:
	  Fix "force cfg reload".
	* timidity/sndfont.c:
	  Fix.
	* timidity/tables.[ch], timidity/mix.c: